refactor:  update person credits endpoint to increase query speed - update test files to match endpoint
